--- a/test_flows/habit_flow.yaml
+++ b/test_flows/habit_flow.yaml
@@ -94,102 +94,168 @@ description: Habit flow
 - takeScreenshot: './screenshots/habits.png'
 
 - pressOn: 'Habits Tab'
+- wait:
+    seconds: 1
 - takeScreenshot: './screenshots/habit_completions1.png'
 
 - pressOn: 'Complete Floss AM -6'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Floss AM -5'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Floss AM -4'
+- wait:
+    seconds: 1
 - pressOn: 'Fail'
 
 - pressOn: 'Complete Floss AM -3'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Floss AM -2'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Floss AM -1'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Floss AM'
+- wait:
+    seconds: 1
 - pressOn: 'Fail'
 
 - pressOn: 'Complete Floss PM -6'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Floss PM -5'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Floss PM -4'
+- wait:
+    seconds: 1
 - pressOn: 'Fail'
 
 - pressOn: 'Complete Floss PM -3'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Floss PM -2'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Floss PM -1'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Sleep 7h30m or more -10'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Sleep 7h30m or more -9'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Sleep 7h30m or more -8'
+- wait:
+    seconds: 1
 - pressOn: 'Fail'
 
 - pressOn: 'Complete Sleep 7h30m or more -7'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Sleep 7h30m or more -6'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Sleep 7h30m or more -5'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Sleep 7h30m or more -4'
+- wait:
+    seconds: 1
 - pressOn: 'Fail'
 
 - pressOn: 'Complete Sleep 7h30m or more -3'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Sleep 7h30m or more -2'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Sleep 7h30m or more -1'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete 10K+ Steps -10'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete 10K+ Steps -9'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete 10K+ Steps -8'
+- wait:
+    seconds: 1
 - pressOn: 'Fail'
 
 - pressOn: 'Complete 10K+ Steps -7'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete 10K+ Steps -6'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete 10K+ Steps -5'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete 10K+ Steps -4'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete 10K+ Steps -3'
+- wait:
+    seconds: 1
 - pressOn: 'Skip'
 
 - pressOn: 'Complete 10K+ Steps -2'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete 10K+ Steps -1'
@@ -201,36 +267,58 @@ description: Habit flow
 - takeScreenshot: './screenshots/habit_completion_10k_all.png'
 
 - pressOn: 'Complete Running 👟 -10'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Running 👟 -9'
+- wait:
+    seconds: 1
 - pressOn: 'Skip'
 
 - pressOn: 'Complete Running 👟 -8'
+- wait:
+    seconds: 1
 - pressOn: 'Skip'
 
 - pressOn: 'Complete Running 👟 -7'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Running 👟 -6'
+- wait:
+    seconds: 1
 - pressOn: 'Skip'
 
 - pressOn: 'Complete Running 👟 -5'
+- wait:
+    seconds: 1
 - pressOn: 'Skip'
 
 - pressOn: 'Complete Running 👟 -4'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete Running 👟 -3'
+- wait:
+    seconds: 1
 - pressOn: 'Skip'
 
 - pressOn: 'Complete Running 👟 -2'
+- wait:
+    seconds: 1
 - pressOn: 'Skip'
 
 - pressOn: 'Complete Running 👟 -1'
+- wait:
+    seconds: 1
 - pressOn: 'Skip'
 
 - pressOn: 'Complete Floss PM'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Complete 10K+ Steps'
@@ -240,6 +328,8 @@ description: Habit flow
 - pressOn: 'Success'
 
 - pressOn: 'Complete Running 👟'
+- wait:
+    seconds: 1
 - pressOn: 'Success'
 
 - pressOn: 'Habits - done'
