Fix app ID on Windows and Linux

--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "A new Flutter project." "\0"
+            VALUE "CompanyName", "com.matthiasnehlsen" "\0"
+            VALUE "FileDescription", "Achieve your goals and keep your data private with Lotti." "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "lotti" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
+            VALUE "InternalName", "Lotti" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 Matthias Nehlsen. All rights reserved." "\0"
             VALUE "OriginalFilename", "lotti.exe" "\0"
-            VALUE "ProductName", "lotti" "\0"
+            VALUE "ProductName", "Lotti" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
