--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,7 @@ dependencies:
   flutter_map: ^3.1.0
   flutter_markdown: ^0.6.9+1
   flutter_native_timezone: ^2.0.0
-  flutter_quill: ^7.1.10
+  flutter_quill: ^7.1.18
   flutter_secure_storage: ^8.0.0
   flutter_sliding_tutorial: ^2.0.0
   flutter_svg: ^2.0.0
@@ -128,14 +128,16 @@ dependencies:
   # research_package: ^0.6.7
   random_password_generator: ^0.2.1
   record: ^4.4.4
-  research_package:
-    git:
-      url: https://github.com/matthiasn/research.package.git
-      ref: 9c77e92
 
+#  research_package:
+#    git:
+#      url: https://github.com/matthiasn/research.package.git
+#      ref: 9c77e92
+
+  research_package: ^1.3.1
   retry: ^3.1.0
   rxdart: ^0.27.7
-  share_plus: ^6.3.1
+  share_plus: ^7.0.0
   sqflite: ^2.0.1
   sqlite3_flutter_libs: ^0.5.2
   syncfusion_flutter_calendar: ^21.1.38
@@ -153,6 +155,8 @@ dependencies:
 
 dependency_overrides:
   analyzer: ^5.12.0
+  device_info_plus: ^9.0.0
+  image: ^4.0.13
   intl: ^0.18.0
   rxdart: ^0.27.1
   xml: ^6.1.0
