Remove `adaptive_dialog` library

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: Achieve your goals and keep your data private with Lotti.
 publish_to: 'none'
-version: 0.9.347+2112
+version: 0.9.348+2113
 
 msix_config:
   display_name: LottiApp
@@ -18,7 +18,6 @@ environment:
   sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
-  adaptive_dialog: ^1.3.0
   arb_utils: ^0.3.0
   assorted_layout_widgets: ^7.0.0
   audio_video_progress_bar: ^1.0.0
@@ -111,6 +110,7 @@ dependencies:
   media_kit_libs_macos_audio: ^1.0.5
   media_kit_libs_windows_audio: ^1.0.3
   media_kit_native_event_loop: ^1.0.3
+  meta: ^1.8.0
   multi_select_flutter: ^4.0.0
   package_info_plus: ^3.1.0
   path: ^1.8.1
