--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: Achieve your goals and keep your data private with Lotti.
 publish_to: 'none'
-version: 0.9.350+2127
+version: 0.9.350+2128
 
 msix_config:
   display_name: LottiApp
@@ -154,7 +154,6 @@ dependencies:
   window_manager: ^0.3.0
 
 dependency_overrides:
-  analyzer: ^5.12.0
   device_info_plus: ^9.0.0
   image: ^4.0.13
   intl: ^0.18.0
@@ -178,7 +177,7 @@ dev_dependencies:
   json_serializable: ^6.0.0
   mocktail: ^0.3.0
   msix: ^3.7.0
-  very_good_analysis: ^4.0.0+1
+  very_good_analysis: ^5.0.0
 
 flutter_icons:
   android: true
